nano-e-commerce/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nano-ecommerce
  labels:
    name: nano-ecommerce
    app: nano-ecommerce-platform
